--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,8 +1,8 @@
 * {padding: 0; margin: 0;}
 
 body{background-color:#99ff66; background-image:url("../images/bg.jpg");}
-article{border:black 1px solid; width: 200px; height: 500px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
-aside{border:black 1px solid; float: right; width: 200px; height: 500px; margin: 20px; background-color: #99ccff;}
+article{border:black 1px solid; width: 200px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
+aside{border:black 1px solid; float: right; width: 200px; margin: 20px; background-color: #99ccff;}
 section{border:black 1px solid; margin: 40px 250px 20px 250px;}
 footer{background-color: black; bottom: 0; width: 100%; position: fixed;}
 #info{color: green;}
@@ -10,15 +10,53 @@ footer{background-color: black; bottom: 0; width: 100%; position: fixed;}
 h1{font-family: verdana; text-transform:uppercase; margin: 20px; position: absolute; top:0px;}
 
 a:link{color:#ff66cc;}
-li a:hover{background-color:#33cc33;}
+li a:hover{background-color:black;}
 li a:visited {color: red;}
-li a{text-decoration:none; padding-left:10px; display:block; width:120px; background-color:white; font-size: 20px;}
+li a{text-align:; text-decoration:none; display:block; width:120px; background-color:white; font-size: 20px;}
 
 nav{margin: 30px 20% 20px ;}
 
-img{margin: 20px;}
-
-
-#conteudo{overflow:auto; padding:10px; background-color:#c0c0c0; height: 500px;}
+#conteudo{overflow:auto; padding:10px; background-color:#c0c0c0; }
 #menu ul{list-style-type:none; margin:10px;}
 #menu li{margin-bottom:2px; display:inline-block;}
+
+.octocat{margin:10px; border:0}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: red;
+    color: white;
+    padding: 3px;
+    width:120px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 100px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 2px 2px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: black;}
