--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,68 @@
 * {padding: 0; margin: 0;}
 
 body{background-color:#99ff66; background-image:url("../images/bg.jpg");}
-article{border:black 1px solid; width: 200px; height: 500px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
+article{border:black 1px solid; width: 200px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
 aside{border:black 1px solid; float: right; width: 200px; margin: 20px; background-color: #99ccff;}
-section{border:black 1px solid; margin: 40px 250px 20px 250px;}
+section{border:black 1px solid; margin: 30px 250px 20px 250px;}
 footer{background-color: black; bottom: 0; width: 100%; position: fixed;}
-
-table{border:blue 1px solid;}
-#franca{border:black 1px solid;	height:100px; width:160px;}
+#info{color: green;}
 
 h1{font-family: verdana; text-transform:uppercase; margin: 20px; position: absolute; top:0px;}
 
-a:link{color:#ff66cc;}
-li a:hover{background-color:#33cc33;}
-li a:visited {color: red;}
-li a{text-decoration:none; padding-left:10px; display:block; width:120px; background-color:white; font-size: 20px;}
+nav{margin: 15px 250px 10px 250px;}
 
-nav{margin: 30px 20% 20px ;}
+#conteudo{overflow:auto; padding:10px; background-color:#c0c0c0; }
 
-#stargrail{margin: 20px;}
+.octocat{margin:10px; border:0}
+
+#menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+#menu li {
+    float: left;
+}
+
+#menu li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
 
-#conteudo{overflow:auto; padding:10px; background-color:#99ff66;}
-#menu ul{list-style-type:none; margin:10px;}
-#menu li{margin-bottom:2px; display:inline-block;}
+#menu li a:hover, .dropdown:hover .dropbtn {
+    background-color: hotpink;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+#menu .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#menu .dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
