--- a/css/angularjs.css
+++ b/css/angularjs.css
@@ -11,7 +11,7 @@ h1{font-family: verdana; text-transform:uppercase; margin: 20px; position: absol
 
 nav{margin: 15px 250px 10px 250px;}
 
-#conteudo{overflow:auto; padding:10px; background-color:rebeccapurple; }
+#conteudo{overflow:auto; padding:10px; background-color:#ff3333; }
 
 .octocat{margin:10px; border:0}
 
