--- a/css/home.css
+++ b/css/home.css
@@ -1,18 +1,19 @@
 * {padding: 0; margin: 0;}
 
-body{background-color:#99ff66; background-image:url("../images/bg.jpg");}
-article{border:black 1px solid; width: 200px; height: 500px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
-aside{border:black 1px solid; float: right; width: 200px; height: 500px; margin: 20px; background-color: #99ccff;}
+body{background-color:#99ff66; background-image:url("../img/bg.jpg");}
+article{border:black 1px solid; width: 200px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
+aside{border:black 1px solid; float: right; width: 200px; margin: 20px; background-color: #99ccff;}
 section{border:black 1px solid; margin: 30px 250px 20px 250px;}
 footer{background-color: black; bottom: 0; width: 100%; position: fixed;}
-
-embed{float: right; margin: 10px}
+#info{color: green;}
 
 h1{font-family: verdana; text-transform:uppercase; margin: 20px; position: absolute; top:0px;}
 
 nav{margin: 15px 250px 10px 250px;}
 
-#conteudo{overflow:auto; padding:10px; background-color:#cc6699;}
+#conteudo{overflow:auto; padding:10px; background-color:#c0c0c0; }
+
+.octocat{margin:10px; border:0}
 
 #menu ul {
     list-style-type: none;
