--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 * {padding: 0; margin: 0;}
 
-body{background-color:#99ff66; background-image:url("../images/bg.jpg");}
+body{background-color:#99ff66; background-image:url("../img/bg.jpg");}
 article{border:black 1px solid; width: 200px; margin: 20px; float: left; background-color: #ffccff; overflow:auto;}
 aside{border:black 1px solid; float: right; width: 200px; margin: 20px; background-color: #99ccff;}
 section{border:black 1px solid; margin: 30px 250px 20px 250px;}
